# rustmix-wave

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  README_RUSTMIX_REMOTE_BLE_R1.md  README_RUSTMIX_REMOTE_R1.md  RELEASE_NOTES-v1.0.0.md  ROADMAP.md  SCOPE.md  SCREENSHOTS.md  Screenshots.md  USERGUIDE.md  espflash.toml  sdkconfig.defaults  sdkconfig.defaults.rustmix-remote-ble
.cargo/: config.toml
core/: Cargo.toml
docs/: ARCHITECTURE.md  BOARD_CONTRACT.md  KNOWN_ISSUES.md  PHYSICAL_SMOKE_TEST.md  RELEASE.md  SD_CARD_SETUP.md  UNICODE_FONTS.md  USER_GUIDE.md  architecture.md
hal-waveshare-epd397/: Cargo.toml  README.md
hal-waveshare-epd397/src/: lib.rs
hal-xteink-x4/: Cargo.toml
local_patches/: patch_rustmix_wave_display_backend_import_v0.py  patch_rustmix_wave_repository_bootstrap_v0.py  patch_rustmix_wave_shell_bridge_ui_import_v0.py  repair_rustmix_wave_focus_hub_cargo_alignment_v0.py  repair_rustmix_wave_shell_bridge_stroke_rect_v0.py  repair_rustmix_wave_xtensa_build_std_config_v0.py  validate_rustmix_wave_display_backend_import_v0.py  validate_rustmix_wave_repository_bootstrap_v0.py  validate_rustmix_wave_shell_bridge_ui_import_v0.py
patches/: rustmix-wave-ble-gatt-r1-overlay.diff  rustmix-wave-main-loop-hook-example.diff
rustmix_reader_menu_footer_fix_v1/: README-APPLY.md
screenshots/: README.md
scripts/: audit-indic-epub-fixture.py  audit_remaining_pulp_runtime_dependencies.sh  audit_rustmix_wave_reader_port_recon_v0.py  build-release-firmware.sh  build.sh  build_release_ble_v1_2_0.sh  build_release_wifi_v1_2_0.sh  build_rustmix_remote_ble_r1.sh  build_x4_firmware_artifacts.sh  build_x4_release_firmware.sh  check_repo_hygiene.sh  create_rustfirmware_bin.sh  extract-epub-font-corpus.py  flash.sh  flash_x4_rustmix_app0.sh  flash_x4_standard_partition_table.sh  install-calendar-x4-pack.sh  install-dictionary-x4-pack.sh  install-indic-font-pack.sh  install-minesweeper-sd-sample.sh  install-motion-2048-sd-sample.sh  install-sd-examples.sh  install-sleep-images.sh  install-sokoban-tilt-sd-sample.sh  install-tilt-maze-sd-sample.sh  install_flashcards_image_cards_sd.sh  install_flashcards_sd_app.sh  package-release.sh  prepare_dual_release_v1_2_0_docs.sh  read_x4_partition_table.sh  release_v1_2_0_ble.sh  release_v1_2_0_wifi.sh  resolve-built-elf.sh  test-flash-target-resolution.sh  test-host.sh  test-indic-font-builder-zip.sh  (+24 more)
target-waveshare-epd397/: Cargo.toml  README.md  sdkconfig.defaults
target-waveshare-epd397/src/: main.rs
(+1588 files in other folders)
