[package]
name = "target-waveshare-epd397"
version = "0.1.0"
edition = "2021"
resolver = "2"
build = "build.rs"
description = "Rustmix-Wave Waveshare ESP32-S3 e-Paper 3.97 target"

[[bin]]
name = "target-waveshare-epd397"
path = "src/main.rs"
harness = false

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
embedded-graphics = "0.8"
embedded-hal = "1.0"
embedded-svc = "0.29"
esp-idf-hal = "0.46"
esp-idf-svc = { version = "0.52.1", features = ["binstart", "critical-section"] }
esp-idf-sys = { version = "0.37", features = ["binstart"] }
hal-waveshare-epd397 = { path = "../hal-waveshare-epd397" }
log = { version = "0.4", default-features = false }

[build-dependencies]
embuild = "0.33"

[features]
default = []
